# strahler-tree-experiments

./: .gitignore  LICENSE  Makefile  README.md  genstree.c  lenstree.cpp  meson.build  pms2dot.c  printdot.c  prtstree.c  prtstree.h  str-tree.cc  test.hpp  test_readme.md
.github/workflows/: regtest.yml  tests.yml
examples/: k2t1h8.hpp  k2t1h8p3.hpp  k2t3h6p2.hpp  k3t2h3.hpp  k3t2h5.hpp  k3t2h8.hpp  k3t2h9p4.hpp  k3t8h3.hpp  k4t2h4.hpp  k4t3h5.hpp  k4t3h7p4.hpp
experimental/: Makefile  str_simd.cpp
src/: convert_out.py  genstree.c  lenstree.cpp  pargame.c  pargame.h  pgfilt.c  pms2dot.c  prtstree.c  str-tree.cc  utils.h  utrees.h
tests/: README.md  run-regression.sh  run-single-test.sh  unit_tests.c
tests/golden/: d_k1_t2_h2.out  d_k1_t2_h4.out  d_k2_t1_h2.out  d_k2_t2_h2.out  d_k3_t1_h3.out  d_k3_t2_h4.out  d_k4_t2_h4.out  gen_err_k.out  gen_err_k_val.out  gen_err_l.out  j_k1_t2_h2.out  j_k1_t2_h4.out  j_k2_t1_h2.out  j_k2_t2_h2.out  j_k3_t1_h3.out  j_k3_t2_h4.out  j_k4_t2_h4.out  l103_k3_t2_h4.out  l1_k1_t2_h2.out  l1_k2_t1_h2.out  l1_k2_t2_h2.out  l1_k3_t1_h3.out  l1_k3_t2_h4.out  l1_k4_t2_h4.out  l31_k4_t2_h4.out  l3_k2_t1_h2.out  l5_k3_t1_h3.out  l7_k2_t2_h2.out  len_err_args.out  len_k1_t2_h2.out  len_k1_t2_h4.out  len_k2_t1_h2.out  len_k2_t2_h2.out  len_k3_t1_h3.out  len_k3_t2_h4.out  len_k4_t2_h4.out  p1_k1_t2_h2.out  p1_k1_t2_h4.out  p1_k2_t1_h2.out  p1_k2_t2_h2.out  (+10 more)
